pri_SG.tf
#creating security group for private server
resource "aws_security_group" "B_Security" {
  name        = var.pri_sg
  description = "Allow outbound connections"
  vpc_id = aws_vpc.my_vpc.id

  ingress {
    from_port   = 22
    to_port     = 22
    protocol    = "tcp"
    cidr_blocks = ["0.0.0.0/0"]
  }
   

  egress {
    from_port       = 0
    to_port         = 0
    protocol        = "-1"
    cidr_blocks     = ["0.0.0.0/0"]
  }

  tags = {
    Name = var.pri_sg_tag
  }
}
